--- a/start-ec.service
+++ b/start-ec.service
@@ -4,6 +4,7 @@ Description=LCEC Auto Start Service
 [Service]
 User=cnc
 ExecStart=sudo bash /home/cnc/scripts/start-ec.sh
+Restart=always
 
 [Install]
 WantedBy=multi-user.target
